# SimpleSnakeGame

./: .gitmodules  CMakeLists.txt  README.md
Maps/: DefaultMap.txt
app/: CMakeLists.txt  main.cpp
app/ConsoleInterface/: CMakeLists.txt
app/ConsoleInterface/include/: ConsoleColours.hpp  MapRepresentation.hpp  TileRepresentation.hpp  TileRepresentationFactory.hpp
app/ConsoleInterface/source/: CMakeLists.txt  MapRepresentation.cpp  TileRepresentation.cpp  TileRepresentationFactory.cpp
app/ConsoleInterface/tests/: CMakeLists.txt  MapRepresentationTest.cpp  TileRepresentationFactoryTest.cpp  TileRepresentationTest.cpp  TileRepresentationTestHelper.hpp
app/GameLogic/: CMakeLists.txt
app/GameLogic/Game/: CMakeLists.txt
app/GameLogic/Game/include/: Game.hpp  IPlayerController.hpp  PlayerController.hpp
app/GameLogic/Game/source/: CMakeLists.txt  Game.cpp
app/GameLogic/Game/tests/: PlayerControllerTest.cpp
app/GameLogic/Map/: CMakeLists.txt
app/GameLogic/Map/include/: Map.hpp  Point.hpp  PositionTypes.hpp  Snake.hpp  Tile.hpp
app/GameLogic/Map/source/: CMakeLists.txt  Map.cpp  Snake.cpp  Tile.cpp
app/GameLogic/Map/tests/: MapTest.cpp  TileTest.cpp
app/GameLogic/MapReader/: CMakeLists.txt
app/GameLogic/MapReader/include/: FileReader.hpp  IMapReader.hpp  TxtMapReader.hpp
app/GameLogic/MapReader/source/: CMakeLists.txt  FileReader.cpp  TxtMapReader.cpp
app/GameLogic/MapReader/tests/: FileReaderTest.cpp  MapReaderTest.cpp
app/GameLogic/MapReader/tests/test_input/: 3x3MapWithSnakeInTheCenter.txt  3x3MapWithWallInTheCenter.txt
app/GraphicsOutput/: CMakeLists.txt
app/GraphicsOutput/include/: GraphicsOutput.hpp
app/GraphicsOutput/source/: CMakeLists.txt  GraphicsOutput.cpp
app/Map/: CMakeLists.txt
app/Map/include/: Map.hpp  Tile.hpp
app/Map/source/: CMakeLists.txt  Map.cpp  Tile.cpp
app/Map/tests/: CMakeLists.txt  MapTest.cpp  TileTest.cpp
app/MapReader/include/: FileReaderException.hpp  IMapReader.hpp
app/MapReader/source/: CMakeLists.txt  TxtMapReader.cpp
app/MapReader/tests/: CMakeLists.txt  MapReaderTest.cpp
app/MapReader/tests/test_input/: 3x3MapWithPointsInTheCenter.txt  Empty100x10Map.txt  Empty3x3Map.txt
app/UserInput/: CMakeLists.txt
app/UserInput/include/: InputAdapter.hpp  KeyboardInput.hpp
app/UserInput/source/: CMakeLists.txt  InputAdapter.cpp  KeyboardInput.cpp
app/Utilities/: CMakeLists.txt
app/Utilities/include/: KeyboardInput.hpp  StrongType.hpp
app/Utilities/source/: CMakeLists.txt
cmake/Modules/: config.cmake  (+3 more)
